a proper entry <verisimilitude#35550>

--- a/wiki/verisimilitude.wikitext
+++ b/wiki/verisimilitude.wikitext
@@ -1,1 +1,6 @@
-{{Rndc}}
+==English==
+===Noun===
+'''verisimilitude'''
+# [[truth]]
+# something that is, or [[appears]] to be, [[true]] or [[real]]
+[[category:English nouns]]
