fmt; +vbl n & v form <grouping#78311>

--- a/wiki/grouping.wikitext
+++ b/wiki/grouping.wikitext
@@ -1,6 +1,16 @@
 ==English==
-===Noun===
+===Verb form===
 '''grouping'''
-#The [[act]] of [[uniting]] into [[group]]s
-#A [[collection]] of [[thing]]s or [[people]] [[unite]]d as a group
+                                                                                
+#[[Present participle]] of '''to [[group]]'''.
+                                                                                
+===Verbal noun===
+'''grouping''' (''[[uncountable]]'')
+                                                                                
+#The action of the verb '''to group'''.
+                                                                                
+===Noun===
+'''grouping''' (''plural'' '''groupings''')
+#A [[collection]] of [[thing]]s or [[people]] [[unite]]d as a group.
+
 [[Category:English nouns]]
