/* Category:Russian nouns */ <чай#55466>

--- a/wiki/%D1%87%D0%B0%D0%B9.wikitext
+++ b/wiki/%D1%87%D0%B0%D0%B9.wikitext
@@ -1,6 +1,59 @@
 ==Russian==
+[[Category:Russian nouns]]
 ===Noun===
-'''чай''' ''m'' (chaj) (plural: [[чая]])
+'''чай''' (čaj) ''m'', чаи (čaí) ''pl''
 
 # [[tea]]
+#:[[кирпичный]] чай (kirpičnyj čaj) — ''brick tea''
+#:[[китайский]] чай (kitájskij čaj) — ''China tea''
+#:[[цветочный]] чай (tsvetóčnyj čaj) — ''rose tea''
+#:[[цейлонский]] чай (tsejlónskij čaj) — ''Ceylon tea''
+#:[[крепкий]] чай (krépkij čaj) — ''strong tea''
+#:[[слабый]] чай (slábyj čaj) — ''weak tea''
+#:[[сладкий]] чай (sládkij čaj) — ''sweet tea''
+#:[[стакан]] чаю (stakán čáju) — ''a glass of tea''
+#:[[чашка]] чая (čáška čája) — ''a cup of tea''
+#:[[приглашать|пригласить]] [[кто|кого-то]] на чашку чая (priglasít’ kovó-to na čášku čája) — ''to invite someone for tea''
+#:[[давать|Дайте]] [[я|мне]], [[пожалуйста]], [[кило]] чаю (dájte mne, požálsta, kiló čáju) — ''I’d like a kilo of tea, please.''
+#:[[давать|дать]] на чай (dat’ na čaj) — ''to leave a tip''
+
+===Declension===
+{| border="1" cellpadding="4" cellspacing="0"
+!
+! style="background-color: #EFEFFF" align="center"|[[singular]]
+! style="background-color: #EFEFFF" align="center"|[[plural]]
+|-
+! style="background-color: #FFFFE0" align="left"|[[nominative case|nominative]]
+| align="center"|{{Unicode|чай}}
+| align="center"|{{Unicode|чаи́}}
+|-
+! style="background-color: #FFFFE0" align="left"|[[genitive case|genitive]]
+| align="center"|{{Unicode|ча́я}}
+| align="center"|{{Unicode|чаёв}}
+|-
+! style="background-color: #FFFFE0" align="left"|[[partitive case|partitive genitive]]
+| align="center"|{{Unicode|ча́ю}}
+| align="center"|{{Unicode|чаёв}}
+|-
+! style="background-color: #FFFFE0" align="left"|[[dative case|dative]]
+| align="center"|{{Unicode|ча́ю}}
+| align="center"|{{Unicode|чая́м}}
+|-
+! style="background-color: #FFFFE0" align="left"|[[accusative case|accusative]]
+| align="center"|{{Unicode|чай}}
+| align="center"|{{Unicode|чаи́}}
+|-
+! style="background-color: #FFFFE0" align="left"|[[instrumental case|instrumental]]
+| align="center"|{{Unicode|ча́ем}}
+| align="center"|{{Unicode|чая́ми}}
+|-
+! style="background-color: #FFFFE0" align="left"|[[prepositional case|prepositional]]
+| align="center"|{{Unicode|о ча́е}}
+| align="center"|{{Unicode|о чая́х}}
+|-
+! style="background-color: #FFFFE0" align="left"|[[locative case|locative]]
+| align="center"|{{Unicode|в ча́е, в чаю́}}
+| align="center"|{{Unicode|в чая́х}}
+|}
+
 [[ja:чай]]
