a modern definition <vow#62880>

--- a/wiki/vow.wikitext
+++ b/wiki/vow.wikitext
@@ -2,11 +2,16 @@
 
 ===Noun===
 '''vow''' (''plural:'' '''vows''')
-#A solemn promise made to God, or to some deity; an act by which one consecrates or devotes himself, absolutely or conditionally, wholly or in part, for a longer or shorter time, to some act, service, or condition; a devotion of one's possessions; as, a baptismal vow; a vow of poverty.
-#Specifically, a promise of fidelity; a pledge of love or affection; as, the marriage vow.
-
+# A [[solemn]] [[promise]] to [[perform]] some [[act]], or [[behave]] in a [[specified]] manner, especially a promise to [[live]] and [[act]] in [[accordance]] with the [[rule]]s of a [[religious]] [[order]]
+# A [[declaration]] or [[assertion]]
 ===Verb===
 '''to vow'''
 # to make a vow
 # to [[declare]] publicly that one made a vow, usually to show one's determination or to announce an act of retaliation.
 #:''The rebels '''vowed''' to continue their fight until they succeed.''
+===Related terms===
+*[[vow of chastity]]
+*[[vow of poverty]]
+*[[vow of silence]]
+*[[votive]]
+*[[devote]]
