--- a/wiki/%D1%8D%D1%82%D0%BE.wikitext
+++ b/wiki/%D1%8D%D1%82%D0%BE.wikitext
@@ -10,6 +10,6 @@
 # it is, this is, that is, these are, those are
 #:Это—[[учитель]] (éto—učítel’) — ''This is the teacher.''
 #:Это—[[брат]] [[и]] [[сестра]] (éto—brat i sestrá) — ''They are brother and sister.''
-#:Это [[не]] [[молоко]], [[а]] [[кефир]] (éto ne molokó, a kefir) — ''This is not milk, but [[kefir]].''
+#:Это [[не]] [[молоко]], [[а]] [[кефир]] (éto ne molokó, a kefír) — ''This is not milk, but [[kefir]].''
 # [[this]], [[it]], [[that]]  ''(neuter form of ''[[этот]]'')''
 #:[[я|Мне]] это [[нравиться|нравится]]! (mne éto nrávitsja) — ''I like it!'' or ''I like that!''
