--- a/wiki/reinvent.wikitext
+++ b/wiki/reinvent.wikitext
@@ -1,4 +1,7 @@
 ==English==
+===Etymology===
+*[[re-]] + [[invent]]
+
 ===Transitive verb===
 '''to reinvent''' ('''reinvents''', '''reinventing''', '''reinvented''')
 
