robot  Adding:pt <bag#7376>

--- a/wiki/bag.wikitext
+++ b/wiki/bag.wikitext
@@ -47,7 +47,6 @@
 [[Category:English concrete nouns]]
 [[Category:Old Norse derivations]]
 
-[[it:bag]]
 [[Category:1000 English basic words]]
 
 ===Related terms===
@@ -79,3 +78,6 @@
 *[[teabag]]
 *[[toolbag]]
 *[[windbag]]
+
+[[it:bag]]
+[[pt:Bag]]
