wikified component words; +inflections <reinvent the wheel#92292>

--- a/wiki/reinvent_the_wheel.wikitext
+++ b/wiki/reinvent_the_wheel.wikitext
@@ -1,5 +1,6 @@
 ==English==
 ===Phrasal verb===
-'''to reinvent the wheel'''
-#{{idiom}} to [[redo]] [[work]] unneccessarily when it has already been done to everyone's satisfaction; to [[rethink]] a working system, technique, etc. in a needless attempt to improve it
-#:''Just use the database as is and don't try to '''reinvent the wheel'''.''
+'''to [[reinvent]] the [[wheel]]''' ('''reinvents the wheel''', '''reinventing the wheel''', '''reinvented the wheel''')
+
+#{{idiom}} To [[redo]] [[work]] [[unnecessary|unneccessarily]] when it has already been done [[satisfactory|satisfactorily]]; to [[rethink]] a working system, technique, etc. in a pointless attempt to improve it.
+#:''Just use the database as it is and don't try to '''reinvent the wheel'''.''
