--- a/wiki/%D1%8D%D1%82%D0%BE.wikitext
+++ b/wiki/%D1%8D%D1%82%D0%BE.wikitext
@@ -11,5 +11,5 @@
 #:Это—[[учитель]] (éto—učítel’) — ''This is the teacher.''
 #:Это—[[брат]] [[и]] [[сестра]] (éto—brat i sestrá) — ''They are brother and sister.''
 #:Это [[не]] [[молоко]], [[а]] [[кефир]] (éto ne molokó, a kefír) — ''This is not milk, but [[kefir]].''
-# [[this]], [[it]], [[that]]  ''(neuter form of ''[[этот]]'')''
+# [[this]], [[it]], [[that]]
 #:[[я|Мне]] это [[нравиться|нравится]]! (mne éto nrávitsja) — ''I like it!'' or ''I like that!''
