/* Category:Russian nouns */ <сестра#785741>

--- a/wiki/%D1%81%D0%B5%D1%81%D1%82%D1%80%D0%B0.wikitext
+++ b/wiki/%D1%81%D0%B5%D1%81%D1%82%D1%80%D0%B0.wikitext
@@ -1,8 +1,42 @@
 ==Russian==
+[[Category:Russian nouns]]
 ===Noun===
-'''сестра''' (sestra)
+'''сестра''' (sestrá) ''f'', сёстры (sjóstry) ''pl''
+
 #[[sister]]
-#:[[сводный|сводная]] сестра — [[stepsister]]
-#:[[двоюродный|двоюродная]] сестра — [[cousin]]
-#:[[родной|родная]] сестра — sister ([[sibling]])
-#:[[медицинский|медицинская]] сестра — [[nurse]]
+#:[[сводный|сводная]] сестра — ''[[stepsister]]''
+#:[[двоюродный|двоюродная]] сестра — ''[[cousin]], [[first cousin]]''
+#:[[троюродный|троюродная]] сестра — ''[[second cousin]]''
+#:[[родной|родная]] сестра — ''sister ([[sibling]])''
+#:[[медицинский|медицинская]] сестра — ''[[nurse]]''
+
+===Declension===
+{| border="1" cellpadding="4" cellspacing="0"
+!
+! style="background-color: #EFEFFF" align="center"|[[singular]]
+! style="background-color: #EFEFFF" align="center"|[[plural]]
+|-
+! style="background-color: #FFFFE0" align="left"|[[nominative case|nominative]]
+| align="center"|{{Unicode|сестра́}}
+| align="center"|{{Unicode|сёстры}}
+|-
+! style="background-color: #FFFFE0" align="left"|[[genitive case|genitive]]
+| align="center"|{{Unicode|сестры́}}
+| align="center"|{{Unicode|сестёр}}
+|-
+! style="background-color: #FFFFE0" align="left"|[[dative case|dative]]
+| align="center"|{{Unicode|сестре́}}
+| align="center"|{{Unicode|сёстрам}}
+|-
+! style="background-color: #FFFFE0" align="left"|[[accusative case|accusative]]
+| align="center"|{{Unicode|сестру́}}
+| align="center"|{{Unicode|сестёр}}
+|-
+! style="background-color: #FFFFE0" align="left"|[[instrumental case|instrumental]]
+| align="center"|{{Unicode|сестро́й, -о́ю}}
+| align="center"|{{Unicode|сёстрами}}
+|-
+! style="background-color: #FFFFE0" align="left"|[[prepositional case|prepositional]]
+| align="center"|{{Unicode|о сестре́}}
+| align="center"|{{Unicode|о сёстрах}}
+|}
