--- a/wiki/weight.wikitext
+++ b/wiki/weight.wikitext
@@ -30,8 +30,8 @@
 *[[weigh]]
 [[Category:1000 English basic words]]
 
-== Verb ==
+=== Verb ===
 
-=== Translations ===
+==== Translations ====
 
 *{{fr}}: [[pondérer]]
