robot  Adding:pt,hu,pl,gl <banco#95001>

--- a/wiki/banco.wikitext
+++ b/wiki/banco.wikitext
@@ -3,3 +3,8 @@
 [[Category:Italian nouns]]
 '''banco''' ''m'' (''plural'' banchi)
 # [[desk]]
+
+[[gl:Banco]]
+[[hu:Banco]]
+[[pl:Banco]]
+[[pt:Banco]]
