robot  Adding:et <banal#35026>

--- a/wiki/banal.wikitext
+++ b/wiki/banal.wikitext
@@ -34,3 +34,5 @@
 *Polish: [[banalny]] ''m'', [[banalna]] ''f'', [[banalne]] ''n'', [[banalni]] ''pl''
 *Portuguese: banal ''m'', ''f''
 *Spanish: banal ''m'', ''f''
+
+[[et:Banal]]
