--- a/wiki/weigh.wikitext
+++ b/wiki/weigh.wikitext
@@ -7,11 +7,11 @@
 ===Transitive verb===
 '''to weigh''' ([[weighs]], [[weighed]], [[weighing]])
 
-#To determine the weight of an object.
+#To determine the weight of an object. *{{fr}}:[[peser]]
 #''(metaphorical)'' To determine the intrinsic value or merit of an object
-#: ''You have been weighed in the balance and found wanting.''
-#To consider a subject.
-#(''Nautical'') To raise an anchor free of the seabed.
+#: ''You have been weighed in the balance and found wanting.'' *{{fr}}:[[peser]]
+#To consider a subject. (*{{fr}}:[[peser]])
+#(''Nautical'') To raise an anchor free of the seabed. *{{fr}}:[[lever]] (l'ancre)
 
 ====Translations====
 *{{msg:fi}}: [[punnita]] (1)
