/* Category:Russian nouns */ <кефир#99478>

--- a/wiki/%D0%BA%D0%B5%D1%84%D0%B8%D1%80.wikitext
+++ b/wiki/%D0%BA%D0%B5%D1%84%D0%B8%D1%80.wikitext
@@ -4,4 +4,4 @@
 '''кефир''' (kefír) ''m''
 
 #[[kefir]] (a [[yogurt]]-like [[beverage]] made from [[fermented]] [[cow|cow’s]] [[milk]])
-#: [[Я]] [[просто]] [[обожать|обожаю]] кефир, [[но]] [[зато]] [[терпеть]] [[не]] [[мочь|могу]] [[молоко]]! — I just love [[kefir]], but, [[on the other hand]], I hate [[milk]]!
+#: [[Я]] [[просто]] [[обожать|обожаю]] кефир, [[но]] [[зато]] [[терпеть]] [[не]] [[мочь|могу]] [[молоко]]! — ''I just love [[kefir]], but, [[on the other hand]], I hate [[milk]]!''
