robot  Adding:et <bandwidth#92992>

--- a/wiki/bandwidth.wikitext
+++ b/wiki/bandwidth.wikitext
@@ -5,3 +5,5 @@
 # of a [[signal]], the width of the smallest frequency band within which the signal can fit
 # informally, the [[capacity]], [[energy]] or [[time]] required
 #:''I think it's a worthy project, but I just don't have the '''bandwidth''' right now.''
+
+[[et:Bandwidth]]
