robot  Adding:pt <baptism#43898>

--- a/wiki/baptism.wikitext
+++ b/wiki/baptism.wikitext
@@ -45,5 +45,7 @@ an oath by [[godparents]] to aid the [[godchild]] in their life endeavors.
 *[[pedobaptism]]
 *[[sprinkling]]
 
-[[it:baptism]]
 [[Category:Greek derivations]]
+
+[[it:baptism]]
+[[pt:Baptism]]
