/* Category:Russian nouns */ <молоко#99483>

--- a/wiki/%D0%BC%D0%BE%D0%BB%D0%BE%D0%BA%D0%BE.wikitext
+++ b/wiki/%D0%BC%D0%BE%D0%BB%D0%BE%D0%BA%D0%BE.wikitext
@@ -1,8 +1,10 @@
 ==Russian==
+[[Category:Russian nouns]]
 ===Noun===
-'''''' (moloko)
+'''молоко''' (molokó) ''n''
+
 #[[milk]]
-#: [[парное молоко]] — fresh milk 
+#: [[парное молоко]] — ''fresh milk''
 
 ===Idioms===
 У него еще [[молоко на губах не обсохло]]! — He is a [[greenhorn]], [[for sure]]!
