/* Category:Russian nouns */ <молоко#99483>

--- a/wiki/%D0%BC%D0%BE%D0%BB%D0%BE%D0%BA%D0%BE.wikitext
+++ b/wiki/%D0%BC%D0%BE%D0%BB%D0%BE%D0%BA%D0%BE.wikitext
@@ -7,4 +7,4 @@
 #: [[парное молоко]] — ''fresh milk''
 
 ===Idioms===
-У него еще [[молоко на губах не обсохло]]! — He is a [[greenhorn]], [[for sure]]!
+*[[У]] [[он|него]] [[ещё]] [[молоко на губах не обсохло]]! (u nevó ješčó molokó na gubákh ne obsókhlo) — ''He’s a [[greenhorn]], [[for sure]]!''
