robot  Adding:pt,nl <barrier#53367>

--- a/wiki/barrier.wikitext
+++ b/wiki/barrier.wikitext
@@ -1,3 +1,5 @@
 #A [[boundary]], [[blockade]] or other method of preventing entry or exit from a location.
 
 [[it:barrier]]
+[[nl:barrier]]
+[[pt:Barrier]]
