robot  Adding:pt <barn#40450>

--- a/wiki/barn.wikitext
+++ b/wiki/barn.wikitext
@@ -72,5 +72,6 @@ Said to be from the phrase ''as big as a barn'' - see Wikipedia link below for m
 [[it:barn]]
 [[hu:barn]]
 [[pl:Barn]]
+[[pt:Barn]]
 [[fi:Barn]]
 [[sv:barn]]
