robot  Adding:de <basa#85617>

--- a/wiki/basa.wikitext
+++ b/wiki/basa.wikitext
@@ -8,3 +8,5 @@ From [[bas]] (leader of the daily, actual work) + ''-a'' to construct the verb
 ===Verb===
 '''basa'''
 #(''dated'') to lead, and [[direct]], the daily work
+
+[[de:basa]]
