/* Translations */ +sv gender <abundant number#8981>

--- a/wiki/abundant_number.wikitext
+++ b/wiki/abundant_number.wikitext
@@ -10,7 +10,7 @@
 
 ====Translations====
 *Spanish: [[número abundante]] ''m''
-*Swedish: [[ymnigt tal]] <!--gender?-->
+*Swedish: [[ymnigt tal]] ''n''
 
 ===See also===
 *[[amicable numbers]]
