--- a/wiki/gatto.wikitext
+++ b/wiki/gatto.wikitext
@@ -1,4 +1,6 @@
 ==Italian==
+===Etymology===
+Late Latin ''[[cattus]]''
 ===Noun===
 '''gatto''' ''m'' (''plural'' '''gatti''')
 
@@ -6,8 +8,13 @@
 #(''male'') [[tom]], [[tomcat]]
 ===Related terms===
 *[[gatta]]
+*[[gattaiola]]
+*[[gattamorta]]
+*[[gatteggiare]]
 *[[gattino]]
 *[[gattina]]
+*[[gattomammone]], [[gatto mammone]]
+*[[gattopardo]]
 
 [[it:gatto]]
 [[ja:gatto]]
