robot  Adding:pt <bass#8967>

--- a/wiki/bass.wikitext
+++ b/wiki/bass.wikitext
@@ -26,3 +26,5 @@ From Italian ''[[basso]]'', '''low''', from Latin ''[[bassus]]''
 # a [[double bass]], [[bass guitar]], [[electric bass]] or bass [[synthesiser]]
 
 [[Category:English heteronyms]]
+
+[[pt:Bass]]
