robot  Adding:pt <basket#7384>

--- a/wiki/basket.wikitext
+++ b/wiki/basket.wikitext
@@ -60,7 +60,9 @@
 
 # slang for [[basketball]]
 
+[[Category:1000 English basic words]]
+
 [[it:basket]]
 [[nl:basket]]
+[[pt:Basket]]
 [[sv:basket]]
-[[Category:1000 English basic words]]
