robot  Adding:pt <basis#7953>

--- a/wiki/basis.wikitext
+++ b/wiki/basis.wikitext
@@ -23,7 +23,9 @@
 
 # basis
 
+[[Category:Greek derivations]]
+
 [[it:basis]]
 [[nl:basis]]
+[[pt:Basis]]
 [[ru:Basis]]
-[[Category:Greek derivations]]
