--- a/wiki/basic.wikitext
+++ b/wiki/basic.wikitext
@@ -1,14 +1,26 @@
 ==English==
 
-==={{Acronym}}===
-'''BASIC'''
+===Etymology===
+[[base]] + [[-ic]]
 
-#{{complang}}: Beginner's All-purpose Symbolic Instruction Code
+===Noun===
+'''basic''' (''plural:'' [[basics]])
+# A necessary commodity, a staple requirement.
+#:''Rice is a '''basic''' for many Asian villagers.''
+# An elementary building block, e.g. a fundamental piece of knowledge.
+#:''Arithmetic is a '''basic''' for the study of mathematics.''
 
-===Proper noun===
-'''BASIC'''
-#{{complang}}: A family of third-generation computer programming languages (c.1964 on).
-#:''Many programs were written for the Sinclair Spectrum computer in '''BASIC'''.''
+===Adjective===
+'''basic'''
+# necessary, essential for life or some process.
+#:''Flour is a '''basic''' ingredient of bread.''
+# elementary, simple, merely functional.
+#:''The Hotel Sparta's accommodation is purely '''basic'''.''
 
-{{wikipedia}}
-[[pt:BASIC]]
+===Related terms===
+* [[basically]]
+* [[BASIC]]
+
+[[fr:basic]]
+[[it:basic]]
+[[pt:Basic]]
