--- a/wiki/votive.wikitext
+++ b/wiki/votive.wikitext
@@ -5,11 +5,25 @@
 #:''She placed a '''votive''' offering at the shrine.''
 # of, expressing or symbolizing a vow
 #:''The church was lit by '''votive''' candles.''
+
+====Translations====
+*French: [[votif]]
+*Italian: [[votivo]]
+
 ===Noun===
 '''votive'''
 #{{music}} a [[hymn]] or [[chant]] dedicated to a particular [[saint]], or to the [[Virgin Mary]]
+
 ===Related terms===
 *[[votive cancle]]
 *[[votive mass]]
 *[[votive offering]]
 *[[ex-voto]]
+
+----
+
+==French==
+===Adjective===
+'''votive'''
+
+# ''feminine of [[votif]]''
