--- a/wiki/votive.wikitext
+++ b/wiki/votive.wikitext
@@ -1,7 +1,7 @@
 ==English==
 ===Adjective===
 '''votive'''
-# [[dedicated]] or [[given]] in [[fulfillment]] of a [[vow]] or [[pledge]]
+# [[dedicated]] or [[given]] in [[fulfilment]] of a [[vow]] or [[pledge]]
 #:''She placed a '''votive''' offering at the shrine.''
 # of, expressing or symbolizing a vow
 #:''The church was lit by '''votive''' candles.''
