robot  Adding:fi <bastard#42170>

--- a/wiki/bastard.wikitext
+++ b/wiki/bastard.wikitext
@@ -33,3 +33,5 @@
 # ''(often considered somewhat vulgar)'' Exclamation of strong dismay or strong sense of being upset, often with reference to a situation where a '''bastard''' (noun, def. 2) has caused the distress.
 
 *Türkçe: (1) orospu çocuğu, (2) piç
+
+[[fi:Bastard]]
