robot  Adding:pl <bath#23792>

--- a/wiki/bath.wikitext
+++ b/wiki/bath.wikitext
@@ -109,5 +109,7 @@ To be verified and inserted in the appropriate tables (numbering might be wrong)
 ===See also===
 *[[w:Bath|Wikipedia article on Bath]]
 
-[[it:bath]]
 [[Category:1000 English basic words]]
+
+[[it:bath]]
+[[pl:Bath]]
