--- a/wiki/cher.wikitext
+++ b/wiki/cher.wikitext
@@ -7,13 +7,22 @@
 ----
 ==French==
 ===Adjective===
-''cher'' ''m'' (''f'' [[chère]], ''m plural'' chers, ''f plural'' chères)
+'''cher''' ''m'' (''f'' [[chère]], ''m plural'' chers, ''f plural'' chères)
 
 #[[dear]] (''beloved'')
 #[[dear]] (''in salutation of a letter'')
 #:''Chère Marie'' - Dear Marie
 #[[dear]], [[expensive]]
 
+===Related terms===
+*[[chèrement]]
+*[[chérir]]
+*[[cherté]]
+
+===Proper noun===
+'''Cher''' ''m''
+
+# a province in [[Centre-Val-de-Loire]]
 
 [[et:Cher]]
 [[ru:Cher]]
