robot  Adding:fr <baud#47665>

--- a/wiki/baud.wikitext
+++ b/wiki/baud.wikitext
@@ -8,3 +8,5 @@ Named for [[w:Jean-Maurice-Émile Baudot|Jean-Maurice-Émile Baudot (1845-1903)]
 
 # A rate defined as the number of signaling events per second in a data transmission.
 # (''colloquial'') Synonym for bps (bits per second), regardless of how many signaling events are necessary to signal each bit.
+
+[[fr:baud]]
