--- a/wiki/charge.wikitext
+++ b/wiki/charge.wikitext
@@ -46,5 +46,24 @@
 [[w:Charge|Wikipedia article on Charge]]
 [[category:Basketball]] [[category:Cricket]]
 
+----
+
+==French==
+===Noun===
+'''charge''' ''f''
+
+# [[load]], charge
+
+===Verb form===
+'''charge'''
+
+# ''first-, third-person singular indicative present of [[charger]]''
+# ''first-, third-person singular subjunctive present of charger''
+# ''second-person singular imperative of charger''
+
+===Related terms===
+*[[chargement]]
+*[[charger]]
+
 [[fr:charge]]
 [[it:charge]]
