--- a/wiki/charges.wikitext
+++ b/wiki/charges.wikitext
@@ -1,1 +1,24 @@
-#REDIRECT [[charge]]
+==English==
+===Noun===
+'''charges'''
+
+# plural of [[charge]]
+
+===Verb form===
+'''charges'''
+
+# ''third-person singular present of to [[charge]]''
+
+----
+
+==French==
+===Noun===
+'''charges'''
+
+# plural of [[charge]]
+
+===Verb form===
+'''charges'''
+
+# ''second-person singular indicative present of [[charger]]''
+# ''second-person singular subjunctive present of charger''
