robot  Adding:pl,gl <beatitude#92109>

--- a/wiki/beatitude.wikitext
+++ b/wiki/beatitude.wikitext
@@ -7,3 +7,6 @@
 '''beatitude'''
 #supreme, utmost bliss and happiness
 #any one of the Biblical blessings given by Jesus in Matthew 5:3-12, each beginning as "Blessed are.... "
+
+[[gl:Beatitude]]
+[[pl:Beatitude]]
