--- a/wiki/beast.wikitext
+++ b/wiki/beast.wikitext
@@ -58,5 +58,6 @@ From Latin [[bestia]] : animal, beast
 *[[Russian]]: [[:ru:зверь|зверь]] /zver'/
 *Slovak: [[zver]] ''f/m'', [[zviera]] ''n'', [[šelma]] ''f''
 
+[[pt:Beast]]
 [[ru:Beast]]
 [[fi:Beast]]
