en->w <abundant number#8981>

--- a/wiki/abundant_number.wikitext
+++ b/wiki/abundant_number.wikitext
@@ -17,4 +17,4 @@
 *[[deficient number]]
 *[[sociable numbers]]
 *[[perfect number]]
-*[[en:Abundant_number|Wikipedia article on abundant numbers]]
+*[[w:Abundant_number|Wikipedia article on abundant numbers]]
