robot  Adding:hu,pt <because#1925>

--- a/wiki/because.wikitext
+++ b/wiki/because.wikitext
@@ -54,7 +54,9 @@ These particles are used, in certain connections, to assign the reason of a thin
 *[[why]]
 *[[because of]] (prepositional phrase)
 
-[[pl:Because]]
-
 [[Category:English conjunctions]]
 [[Category:200 English basic words]]
+
+[[hu:because]]
+[[pl:Because]]
+[[pt:Because]]
