--- a/wiki/lance.wikitext
+++ b/wiki/lance.wikitext
@@ -1,5 +1,8 @@
 ==English==
+===Etymology===
+Latin ''[[lancea]]''
 ===Pronunciation===
+* /ˈlɑːns/, /<tt>"lA:ns</tt>/
 *lăns, /læns/, /<tt>l{ns</tt>/
 
 ===Noun===
@@ -24,7 +27,7 @@
 *German: [[Lanze]] ''f''
 *Greek: [[λόγχη]] ''f''
 *Italian: [[lancia]] ''f''
-*Japanese: [[槍]]
+*Japanese: [[槍]] ([[やり]])
 *Korean: [[창]]
 *Spanish: [[lanza]] ''f''
 
@@ -40,12 +43,17 @@
 #To [[open]] with a [[lancet]]; to pierce; as, to lance a [[vein]] or an [[abscess]].
 #To [[throw]] in the [[manner]] of a lance; [[Lanch]].
 
+===Related terms===
+*[[lancet]]
+
 ===Derived terms===
 * [[Free lance]]
+*[[lancer]]
 * [[Lance bucket]] (''Cavalry'')
 * [[Lance corporal]]
 * [[Lance fish]] (''Zoology'')
 * [[Lance knight]]
+*[[lance sergeant]]
 * [[Lance snake]] (''Zoology'')
 * [[Stink-fire lance]] (''Military'')
 
@@ -60,9 +68,24 @@
 
 # [[spear]], lance
 
+===Verb form===
+'''lance'''
+
+# ''first-, third-person singular indicative present of [[lancer]]''
+# ''first-, third-person singular subjunctive present of lancer''
+# ''second-person singular imperative of lancer''
+
 ===Related terms===
 *[[lancement]]
 *[[lancer]]
 *[[lancier]]
+
+----
+
+==Italian==
+===Noun===
+'''lance''' ''f plural''
+
+# ''plural of [[lancia]]''
 
 [[it:lance]]
