--- a/wiki/lancer.wikitext
+++ b/wiki/lancer.wikitext
@@ -5,7 +5,11 @@
 # to [[throw]]
 # to [[start]]
 
-==Related terms===
+====Synonyms====
+*[[jeter]]
+*[[projeter]]
+
+===Related terms===
 *[[lance]]
 *[[lancé]]
 *[[lancée]]
