--- a/wiki/beer.wikitext
+++ b/wiki/beer.wikitext
@@ -178,5 +178,7 @@ The translations below need to be checked by native speakers and inserted into t
 [[fr:beer]]
 [[it:beer]]
 [[nl:beer]]
+[[pl:Beer]]
+[[pt:Beer]]
 [[ro:Beer]]
 [[sv:beer]]
