--- a/wiki/threesome.wikitext
+++ b/wiki/threesome.wikitext
@@ -7,6 +7,8 @@
 #a sexual activity between three people
 ===Synonyms===
 *[[trio]]
+*[[menage a trois]]
+
 ===Related words===
 *[[twosome]], [[foursome]], [[fivesome]], etc
 *[[moresome]]
