/* Synonyms */ added accent to "menage à trois"; separated syns and added another <threesome#99485>

--- a/wiki/threesome.wikitext
+++ b/wiki/threesome.wikitext
@@ -6,8 +6,8 @@
 #a group of [[three]] people
 #a sexual activity between three people
 ===Synonyms===
-*[[trio]]
-*[[menage a trois]]
+*(''group of three people''): [[trio]]
+*(''sexual activity''): [[menage à trois]], [[troilism]]
 
 ===Related words===
 *[[twosome]], [[foursome]], [[fivesome]], etc
