--- a/wiki/voyage.wikitext
+++ b/wiki/voyage.wikitext
@@ -4,16 +4,26 @@
 
 #a long [[journey]]; especially by ship.
 
-----
 ====Translations====
+*Italian: [[viaggio]]
+*Japanese: [[航海]], [[旅]] ([[たび]]), [[旅行]]
 *Korean: [[여행]]
 *Ido: [[voyajo]]
+
+----
 
 ==French==
 ===Noun===
 '''voyage''' ''m''
 
 # [[trip]], [[travel]]
+
+===Verb form===
+'''voyage'''
+
+# ''first-, third-person singular indicative present of [[voyager]]''
+# ''first-, third-person singular subjunctive present of voyager''
+# ''second-person singular imperative of voyager''
 
 ===Related terms===
 *[[voyager]]
