between -> involving ("between" is for TWO things only) <threesome#99485>

--- a/wiki/threesome.wikitext
+++ b/wiki/threesome.wikitext
@@ -3,8 +3,9 @@
 [[three]] + [[-some]]
 ===Noun===
 '''threesome'''
-#a group of [[three]] people
-#a sexual activity between three people
+#A group of [[three]] people.
+#An instance of sexual activity involving three people.
+
 ===Synonyms===
 *(''group of three people''): [[trio]]
 *(''sexual activity''): [[menage à trois]], [[troilism]]
