--- a/wiki/traveller.wikitext
+++ b/wiki/traveller.wikitext
@@ -1,14 +1,13 @@
+==English==
 ===Noun===
 '''traveller''' (plural: [[travellers]])
 
 ===Alternative spellings===
 *[[traveler]] (''US'')<!-- Canada one l or two? -->
 
-# one who travels.
+# one who [[travel]]s.
 #(UK) a (politically correct) term for a modern day [[gypsy]], [[tinker]], [[caravan]] dweller, etc. 
 # (Ireland) Member of the nomadic ethnic minority. (The term ''Gypsy'' is considered historically incorrect).
-====Related terms====
-*[[travel]]
 
 ===See also===
 *[[backpacker]]
