--- a/wiki/voyager.wikitext
+++ b/wiki/voyager.wikitext
@@ -2,10 +2,10 @@
 ===Noun===
 '''voyager''', plural '''[[voyagers]]'''
 
-# A person who voyages, traveler, a person who explores new lands and worlds.
+# A person who voyages, traveller, a person who [[explore]]s new lands and worlds.
 
 ====Synonyms====
-*[[traveler]]
+*[[traveller]]
 
 ====Translations====
 *French: [[voyageur]] ''m'', [[voyageuse]] ''f''
@@ -22,7 +22,7 @@
 ===Verb===
 '''voyager'''
 
-# [[travel]]
+# to [[travel]]
 
 ===Translations===
 
