--- a/wiki/v%E1%BB%9Bi.wikitext
+++ b/wiki/v%E1%BB%9Bi.wikitext
@@ -1,14 +1,18 @@
-==[[Vietnamese]]==
+==Vietnamese==
+===Preposition===
+'''với'''
 
-===[[Preposition]]===
 #[[with]]
 
-===[[Coordinating conjunction|Coordinating]] [[conjunction]]===
+===Coordinating conjunction===
+'''với'''
+
 #[[and]]
 
-====[[Synonym]]s====
-*[[và#Vietnamese|và]]
+====Synonyms====
+*[[và]]
 
-===[[Intransitive]] [[verb]]===
+===Intransitive verb===
+'''với'''
 
 #to [[reach]] (out)
