tidied; +v form; removed "only used with 'a'" note <bruising#52384>

--- a/wiki/bruising.wikitext
+++ b/wiki/bruising.wikitext
@@ -1,7 +1,16 @@
 ==English==
+===Verb form===
+'''bruising'''
+ 
+#[[Present participle]] of '''to [[bruise]]'''.
+ 
+===Verbal noun===
+'''bruising''' (''[[uncountable]]'')
+ 
+#The action of the verb '''to bruise'''.
+
 ===Noun===
 '''bruising''' (''[[uncountable]]'')
 
-#The action of the verb '''to [[bruise]]''')
-#(''slang''; ''used only in singular with'' '''a''') A violent physical attack on   a person.
-#:''You'd better shut up or you'll get a bruising.''
+#(''slang'') A violent physical attack on a person.
+#:''You'd better shut up or you'll get a '''bruising'''.''
