--- a/wiki/borate.wikitext
+++ b/wiki/borate.wikitext
@@ -1,9 +1,26 @@
 ==English==
-
 ===Noun===
-
 '''borate'''
 
-#A salt formed by the combination of boric acid with a base or positive radical.
+#A [[salt]] formed by the combination of [[boric acid]] with a base or positive radical.
+
+===Translations===
+*French: borate
+*Italian: [[borato]] ''m''
+*Japanese: [[硼酸塩]]
+
+===Realted terms===
+*[[boron]]
+
+----
+
+==French==
+===Noun===
+'''borate''' ''m''
+
+# borate
+
+===Related terms===
+*[[bore]]
 
 [[pl:Borate]]
