+vb form & vbl n; examples of adj; compar & superl <soothing#68141>

--- a/wiki/soothing.wikitext
+++ b/wiki/soothing.wikitext
@@ -1,7 +1,22 @@
 ==English==
-===Adjective===
+===Verb form===
 '''soothing'''
-#Tending to [[soothe]]
-#Giving [[relief]]
-#Freeing from [[fear]] or [[anxiety]]
+ 
+#[[Present participle]] of '''to [[soothe]]'''.
+ 
+===Verbal noun===
+'''soothing''' (''[[uncountable]]'')
+ 
+#The action of the verb '''to soothe'''.
+
+===Adjective===
+'''soothing''' ({{compar}} '''more soothing''', {{superl}} '''most soothing''')
+
+#Tending to soothe.
+#:''soothing music''
+#Giving [[relief]].
+#:''a soothing ointment''
+#Freeing from [[fear]] or [[anxiety]].
+#:''soothing words''
+
 [[Category:English adjectives]]
