replaced picture of German flag (!) with "German" <move#42006>

--- a/wiki/move.wikitext
+++ b/wiki/move.wikitext
@@ -14,12 +14,12 @@
 #take something and put it to new place
 
 =====Translations=====
-* {{fi}} : [[siirtää]]
-* {{fr}} : déplacer
-* {{io}} : diplasar, [[movar]]
-* {{german}}: bewegen
-
+{{checktrans}}
 <!-- these trans need to be sorted between the trans and intrans above -->
+*Finnish: [[siirtää]]
+*French: [[déplacer]]
+*German: [[bewegen]]
+*[[Ido]]: [[diplasar]], [[movar]]
 
 ====Translations====
 * {{nl}}: [[bewegen]]
