--- a/wiki/pixilated.wikitext
+++ b/wiki/pixilated.wikitext
@@ -1,6 +1,10 @@
 ==English==
+
 ===Adjective===
 '''pixilated'''
-# [[behaving]] in an [[eccentric]] manner
-# [[whimsical]]
-# [[drunk]]
+# [[behaving]] in an [[eccentric]] manner; [[whimsical]]; [[drunk]]
+# {{computing}}: A very low quality image, where colors of one pixel have been expanded to fill a small rectangle (20 to 80 times larger than the pixel); also, the graphics editing, a function that renders an image as large "cubes".
+
+===External links===
+* http://www.studiolo.org/Mona/images/SquaredGioconda.jpg
+* http://www.studiolo.org/Mona/MonaIcon.gif
