/* Verb form */ <mosse#99496>

--- a/wiki/mosse.wikitext
+++ b/wiki/mosse.wikitext
@@ -4,7 +4,7 @@ mòsse, /ˈmɔsse/, /<tt>"mOsse</tt>/
 ===Verb form===
 '''mosse'''
 
-# third-person singular indicative past historic of [[muovere]]''
+# ''third-person singular indicative past historic of [[muovere]]''
 
 ===Noun===
 '''mosse''' ''f plural''
