robot  Adding:et <petite#93521>

--- a/wiki/petite.wikitext
+++ b/wiki/petite.wikitext
@@ -13,3 +13,5 @@ French ''petite'', feminine of ''[[petit]]'', small, little
 '''petite''' ''f''
 
 #''feminine singular of [[petit]]''
+
+[[et:Petite]]
