full entry <moving#66451>

--- a/wiki/moving.wikitext
+++ b/wiki/moving.wikitext
@@ -1,1 +1,18 @@
-#REDIRECT [[move]]
+==English==
+===Verb form===
+'''moving'''
+ 
+#[[Present participle]] of '''to [[move]]'''.
+ 
+===Verbal noun===
+'''moving''' (''[[uncountable]]'')
+ 
+#The action of the verb '''to move'''.
+ 
+===Adjective===
+'''moving''' ({{compar}} '''more moving''', {{superl}} '''most moving''')
+ 
+#(''no comparative or superlative'') That moves or move.
+#:''moving pictures''
+#That causes someone to feel emotion.
+#:''a moving story''
