robot  Adding:fi <Peter#50152>

--- a/wiki/Peter.wikitext
+++ b/wiki/Peter.wikitext
@@ -26,3 +26,5 @@
 :declension pattern [[Slovak declension pattern chlap|chlap]]
 # [[Peter#English|Peter]]
 [[Category:Greek derivations]]
+
+[[fi:Peter]]
