robot  Adding:hu <between#7931>

--- a/wiki/between.wikitext
+++ b/wiki/between.wikitext
@@ -27,5 +27,7 @@
 *Italian: [[tra]], [[fra]]
 *Japanese: [[間]] ([[あいだ]], aida)
 
-[[it:between]]
 [[Category:200 English basic words]]
+
+[[it:between]]
+[[hu:between]]
