--- a/wiki/Muscovite.wikitext
+++ b/wiki/Muscovite.wikitext
@@ -1,37 +1,19 @@
-===[[Pronunciation]]===
+==English==
+===Pronunciation===
 
 '''Mus*co-vite*'''
 *[[IPA]]: //
 *[[SAMPA]]: //
-===[[Etymology]]===
+===Etymology===
 [[Moscow]] (Muscov(y) + [[-ite]])
-===[[]]===
+
+===Noun===
+'''Muscovite'''
+
 #An inhabitant or a resident of [[Moscow]]
-===[[Translations]]===
-*[[Arabic]]
-*[[Basque]]:
-*[[Catalan]]:
-*[[Danish]]:
-*[[Dutch]]:
-*[[Esperanto]]:
-*[[French]]: [[moscovite]] ''m''/''f''
-*[[Frisian]]:
-*[[German]]:
-*[[Greek]]:
-*[[Hebrew]]:
-*[[Hindi]]:
+
+===Translations===
+*French: [[moscovite]] ''m''/''f''
 *[[Interlingua]]: [[moscovita]] ''m'' & ''f''
-*[[Irish]]:
-*[[Italian]]:
-*[[Japanese]]:
-*[[Korean]]:
-*[[Latin]]:
-*[[Mandarin]]:
-*[[Norwegian]]:
-*[[Polish]]:
-*[[Portuguese]]: [[moscovita]] ''m'' & ''f''
-*[[Romanian]]:
-*[[Spanish]]:
-*[[Swedish]]:
-*[[Taiwanese]]:
-*[[Vietnamese]]:
+*Italian: [[moscovita]]
+*Portuguese: [[moscovita]] ''m'' & ''f''
