--- a/wiki/Moscovite.wikitext
+++ b/wiki/Moscovite.wikitext
@@ -1,27 +1,8 @@
-==[[French]]==
-===[[Translations]]===
+==French==
+===Noun===
+'''moscovite'''
 
-*[[Arabic]]:
-*[[Basque]]:
-*[[Catalan]]:
-*[[Danish]]:
-*[[English]]: [[Muscovite]]
-*[[Frisian]]:
-*[[German]]:
-*[[Greek]]:
-*[[Hebrew]]:
-*[[Hindi]]:
-*[[Irish]]:
-*[[Italian]]:
-*[[Japanese]]:
-*[[Korean]]:
-*[[Latin]]:
-*[[Mandarin]]:
-*[[Norwegian]]:
-*[[Polish]]:
-*[[Portuguese]]:
-*[[Romanian]]:
-*[[Spanish]]:
-*[[Swedish]]:
-*[[Taiwanese]]:
-*[[Vietnamese]]:
+# [[Muscovite]]
+
+===Related terms===
+*[[Moscou]]
