--- a/wiki/placer.wikitext
+++ b/wiki/placer.wikitext
@@ -7,6 +7,21 @@
 * Wikipedia article on [[w:placer_mining|placer mining]].
 
 ----
+
+==French==
+===Verb===
+'''placer'''
+
+# to [[place]]
+# to [[seat]]
+
+===Related terms===
+*[[place]]
+*[[placé]]
+*[[placement]]
+*[[placeur]]
+
+----
 ==Spanish==
 ===Transitive verb===
 '''placer'''
