robot  Adding:ru <biased#98017>

--- a/wiki/biased.wikitext
+++ b/wiki/biased.wikitext
@@ -10,3 +10,5 @@
 #:''The newspaper gave a '''biased''' account of the incident.''
 # [[angled]] at a [[slant]]
 #:''The table had a '''biased''' edge.''
+
+[[ru:Biased]]
