--- a/wiki/%CE%9A%CF%85%CF%81%CE%B9%CE%B1%CE%BA%CE%AE.wikitext
+++ b/wiki/%CE%9A%CF%85%CF%81%CE%B9%CE%B1%CE%BA%CE%AE.wikitext
@@ -1,13 +1,17 @@
 ==Greek==
 ===Pronunciation===
 /kiriaˈki/, /<tt>kiria"ki</tt>/
+
 ===Noun===
 '''Κυριακή''' ''f''
 
-# [[Sunday]]
+#[[Sunday]]
+
+===Derived terms===
+*[[σαββατοκύριακη]]<!--"weekend"; literally "SaturdaySunday"-->
 
 ===Related terms===
 *[[κύριος]]
 
 ===See also===
-*[[εβδομάδα]]
+*[[εβδομάδα]]<!--"week"-->
