robot  Adding:fr <philosophy#61280>

--- a/wiki/philosophy.wikitext
+++ b/wiki/philosophy.wikitext
@@ -19,3 +19,5 @@ from Greek (philosophia): philos = love + sophia = wisdom
 *[[Swedish]]: [[filosofi]] ''c''
 
 [[Category:Greek derivations]]
+
+[[fr:philosophy]]
