--- a/wiki/places.wikitext
+++ b/wiki/places.wikitext
@@ -1,1 +1,25 @@
-#REDIRECT [[place]]
+==Enlgish==
+===Noun===
+'''places'''
+
+#plural of [[place]]
+
+===Verb form===
+'''places'''
+
+# ''third-person singular present of to [[place]]''
+
+----
+
+==French==
+===Noun===
+'''places'''
+
+#plural of [[place]]
+
+===Verb form===
+'''places'''
+
+# ''first-, third-person singular indicative present of [[placer]]''
+# ''first-, third-person singular subjunctive present of placer''
+# ''second-person singular imperative of placer''
