--- a/wiki/livro.wikitext
+++ b/wiki/livro.wikitext
@@ -3,6 +3,7 @@
 '''Translations'''
 
 *[[English]]: [[book]]
+*[[German]]: [[Buch]]
 *[[French]]: [[livre]]
 *[[Greek]]: [[biblio]]/[[vivlio]]
 *[[Ido]], [[Interlingua]], [[Italian]], [[Spanish]]: [[libro]]
