--- a/wiki/phonetic.wikitext
+++ b/wiki/phonetic.wikitext
@@ -6,3 +6,4 @@
 #<i>Language</i>: In Chinese (and other logogram based languages), the phonetic is that portion of a character that provides an indication of the pronunciation of the character.  This may be the whole character, or just a small part of it.  See also [[radical]].
 
 [[pl:Phonetic]]
+[[fi:Phonetic]]
