full entry, with some examples <cruising#88879>

--- a/wiki/cruising.wikitext
+++ b/wiki/cruising.wikitext
@@ -1,1 +1,12 @@
-#REDIRECT [[cruise]]
+==English==
+===Verb form===
+'''cruising'''
+ 
+#[[Present participle]] of '''to [[cruise]]'''.
+ 
+===Verbal noun===
+'''cruising''' (''[[uncountable]]'')
+ 
+#The action of the verb '''to cruise'''.
+#:''Cruising is a popular activity among the over-60s.''
+#:''There was a fair amount of cruising going on at the gay party.''
