--- a/wiki/vagina.wikitext
+++ b/wiki/vagina.wikitext
@@ -17,7 +17,7 @@ n. pl. vaginas or vaginae
 #*A sheathlike structure, such as the leaf of a grass that surrounds a stem.
 
 ====Translations====
-*Chinese: [[yin1dao4]]
+*Chinese: <!-- put the actual Chinese word, not the Pinyin, here -->
 *German: [[Scheide]] ''f'' (1), [[Vagina]] ''f'' (1)
 *Portuguese: [[Vagina]] ''f'' (1)
 
