--- a/wiki/%E5%88%87%E8%85%B9.wikitext
+++ b/wiki/%E5%88%87%E8%85%B9.wikitext
@@ -2,7 +2,7 @@
 === Noun ===
 '''[[切]][[腹]]''' ([[せっぷく]], [[seppuku]])
 
-# [[Ritualized]] self-[[disembowelment]]; ritualized [[suicide]]; [[harakiri]]; [[hari-kari]]; [[seppuku]]
+# [[Ritualized]] self-[[disembowelment]]; ritualized [[suicide]]; [[harakiri]]; [[seppuku]]
 
 === See also ===
 * [[腹切り]] ([[はらきり]], [[harakiri]])
