--- a/wiki/penis.wikitext
+++ b/wiki/penis.wikitext
@@ -71,7 +71,7 @@ See also [[WikiSaurus:penis]]
 *Breton: [[kalc'h]] ''m'' -ioù ''pl'', [[pich]] ''m'' -où ''pl''
 *Bulgarian: [[лат]], [[анат]], [[пенис]]
 *Catalan: penis ''m''
-*Chinese: [[陰莖]],[[阴茎]]
+*Chinese: [[陰莖]], [[阴茎]] (yin1jing1)
 *Czech: [[pyj]], penis.
 *Danish: Penis, Pik.
 *Dutch: penis ''m''
