full entry <losing#90372>

--- a/wiki/losing.wikitext
+++ b/wiki/losing.wikitext
@@ -1,1 +1,16 @@
-#REDIRECT [[lose]]
+==English==
+===Verb form===
+'''losing'''
+ 
+#[[Present participle]] of '''to [[lose]]'''.
+ 
+===Verbal noun===
+'''losing''' (''[[uncountable]]'')
+ 
+#The action of the verb '''to lose'''.
+ 
+===Adjective===
+'''losing'''
+ 
+#That loses or lose, or has or have lost.
+#:''Being on the losing team is disappointing.''
