robot  Adding:pl,gl <bikini#94208>

--- a/wiki/bikini.wikitext
+++ b/wiki/bikini.wikitext
@@ -27,3 +27,6 @@ Named after Bikini Atoll, where nuclear weapons were tested; it was reckoned tha
 *[[bikini line]]
 *[[bikini wax]]
 *[[monokini]]
+
+[[gl:Bikini]]
+[[pl:Bikini]]
