+usage notes; cleaned up trans; syns and trans for newest sense; wikified "Lou" rather than "Lou's" <lose#6249>

--- a/wiki/lose.wikitext
+++ b/wiki/lose.wikitext
@@ -1,7 +1,7 @@
 ==English==
 ===Pronunciation===
 *lo͞oz, /luːz/, /<tt>lu:z</tt>/
-*:'''Homophones''': [[loo]]s, [[Lou's]]
+*:'''Homophones''': [[loo]]s, [[Lou]]'s
 *:[[Rhymes:English:-uːz|Rhymes: -uːz]]
 
 ===Transitive verb===
@@ -11,17 +11,23 @@
 #To fail to [[win]] (a game, competition, etc).
 #To [[shed]] ([[weight]]); [[reduce]]
 #:''I've lost five pounds this week.''
-#(informal) to [[shed]], [[remove]], [[discard]], or [[eliminate]]
+#(''informal'') To [[shed]], [[remove]], [[discard]], or [[eliminate]]
 #:''When we get into the building, please '''lose''' the hat.''
+
+====Usage notes====
+*Do not confuse '''lose''' with '''[[loose]]'''.
 
 ====Synonyms====
 *(''leave accidentally''): [[mislay]], [[misplace]]
-*(''reduce''): [[drop]], [[shed]]
+*(''fail to win''):
+*(''shed (weight)''): [[drop]], [[shed]]
+*(''shed, remove, discard, eliminate''): [[ditch]], [[drop]], [[dump]]
 
 ====Antonyms====
 *(''leave accidentally''): [[find]], [[gain]]
-*(''fail to be the winner of''): [[win]]
-*(''reduce''): [[gain]], [[put on]]
+*(''fail to win''): [[win]]
+*(''shed (weight)''): [[gain]], [[put on]]
+*(''shed, remove, discard, eliminate''):
 
 ====Translations====
 
@@ -30,7 +36,7 @@
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--left column-->
+<!--Put translations for languages from A to I here-->
 *Bulgarian: [[загубвам]], [[губя]]
 *Czech: [[ztratit]]
 *Danish: [[tabe]], [[miste]]
@@ -42,7 +48,7 @@
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--right column-->
+<!--Put translations for languages from J to Z here-->
 *Italian: [[perdere]]
 *Irish: [[caill]]
 *Japanese: [[なくす]] (nakusu) / [[落とす]] ([[おとす]], otosu) / [[失う]] ([[うしなう]], ushinau)
@@ -53,12 +59,12 @@
 |}
 |}
 
-'''fail to be the winner of'''
+'''fail to win'''
 {| border=0  width=100%
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--left column-->
+<!--Put translations for languages from A to I here-->
 *Bulgarian: [[загубвам]], [[губя]]
 *Czech: [[ztratit]]
 *Danish: [[tabe]]
@@ -66,12 +72,12 @@
 *French: [[perdre]]
 *German: [[verlieren]]
 *Indonesian: [[kalah]]
+*Italian: [[perdere]]
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--right column-->
-*Italian: [[perdere]]
+<!--Put translations for languages from J to Z here-->
 *Japanese: [[負ける]] ([[まける]], makeru)
 *Korean: Sino-Korean: [[패배]]하다 (paebae-hada)
 *Russian: [[пoтeрять]]
@@ -80,21 +86,35 @@
 |}
 |}
 
-'''reduce (weight)'''
+'''shed (weight)'''
 {| border=0  width=100%
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--left column-->
+<!--Put translations for languages from A to I here-->
 *Danish: [[tabe]]
 *French: [[perdre]]
+*Italian: [[perdere]]
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--right column-->
-*Italian: [[perdere]]
+<!--Put translations for languages from J to Z here-->
 *Korean: Sino-Korean: [[감소]] (gam-so)
+|}
+|}
+
+'''informal: shed, remove, discard, eliminate'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
 |}
 |}
 
@@ -117,22 +137,22 @@ The translations below need to be checked by native speakers and inserted into t
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--left column-->
+<!--Put translations for languages from A to I here-->
 *French: [[perdre]]
+*Italian: [[perdere]]
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--right column-->
-*Italian: [[perdere]]
+<!--Put translations for languages from J to Z here-->
 |}
 |}
 
 ----
-
 ==German==
 ===Pronunciation===
-{{IPA|[ˈloːzə]}}
+*[[IPA]]: /ˈloːzə/
+
 ===Adjective===
 '''lose'''
 
@@ -141,7 +161,7 @@ The translations below need to be checked by native speakers and inserted into t
 ===Noun===
 '''Lose''' ''plural''
 
-#plural of [[Los]]
+#''plural of [[Los]]''
 
 [[es:lose]]
 [[it:lose]]
