/* Etymology */  Greek - please check <mono-#43228>

--- a/wiki/mono-.wikitext
+++ b/wiki/mono-.wikitext
@@ -6,8 +6,7 @@
 #[[One]].
 
 ====Etymology====
-{{etystub}}
-From {{Gr.}} [[]] single via {{L.}}, {{OF.}}, and {{enm}}
+From {{Gr.}} [[μονος]] (monos) alone, only, sole, single
 
 ====Related terms====
 *[[mono]]
