--- a/wiki/deficient_number.wikitext
+++ b/wiki/deficient_number.wikitext
@@ -3,7 +3,7 @@
 '''deficient number''' (''plural'' '''deficient numbers''')
 
 #(''mathematics'') A number that greater than the sum of all of its [[divisor]]s except itself.
-#:''The factors of 22 are 1, 2, 11 and 22, and 1 + 2 + 11 = 14, which is less than 22, so 22 is a '''deficient number'''.''
+#:''The factors of 22 are 1, 2 and 11 and 22, and 1 + 2 + 11 = 14, which is less than 22, so 22 is a '''deficient number'''.''
 
 ====Synonym====
 *[[defective number]]
@@ -11,11 +11,11 @@
 ====Translations====
 *German: [[defizienten Zahl]] ''f''
 *Spanish: [[número defectivo]] ''m''
-*Swedish: [[defekt tal]]
+*Swedish: [[defekt tal]] ''n''
 
 ===See also===
 *[[abundant number]]
 *[[amicable numbers]]
 *[[sociable numbers]]
 *[[perfect number]]
-*[[en:Deficient_number|Wikipedia article on deficient numbers]]
+*[[en:Abundant_number|Wikipedia article on abundant numbers]]
