--- a/wiki/weigh.wikitext
+++ b/wiki/weigh.wikitext
@@ -7,20 +7,22 @@
 ===Transitive verb===
 '''to weigh''' ([[weighs]], [[weighed]], [[weighing]])
 
-#To determine the weight of an object. *{{fr}}: [[peser]]
+#To determine the weight of an object. 
 #''(metaphorical)'' To determine the intrinsic value or merit of an object
-#: ''You have been weighed in the balance and found wanting.'' *{{fr}}: [[peser]]
-#To consider a subject. *{{fr}}: [[peser]]
-#(''Nautical'') To raise an anchor free of the seabed. *{{fr}}: [[lever]] (l'ancre)
+#: ''You have been weighed in the balance and found wanting.''
+#To consider a subject. 
+#(''Nautical'') To raise an anchor free of the seabed.
 
 ====Translations====
-*{{msg:fi}}: [[punnita]] (1)
+*{{fi}}: [[punnita]] (1)
+*{{fr}}: [[peser]] (1,2,3), [[lever]] (l'ancre) (4)
+*{{sv}}: [[väga]] (1,2)
 
 ===Intransitive verb===
 '''to weigh''' ([[weighs]], [[weighed]], [[weighing]])
 
 ====Translations====
-*{{msg:fi}}: [[painaa]]
+*{{fi}}: [[painaa]]
 *{{fr}}: [[peser]]
 
 ===Related terms===
